# munio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sync-docs.yml
assets/: demo-config-scan.tape  demo-scan.tape
constraints/: protocol.yaml
constraints/generic/asi01-goal-hijack/: prompt-injection-regex.yaml
constraints/generic/asi02-tool-misuse/: api-call-rate-limit.yaml  compound-spend-limit.yaml  deny-cred-harvest.yaml  deny-read-exfil.yaml  discount-bound.yaml  exec-rate-limit.yaml  max-spend-per-request.yaml  resource-quota.yaml  sql-injection-deny.yaml  url-allowlist.yaml  url-denylist.yaml
constraints/generic/asi03-privilege-abuse/: safety-control-sequence.yaml  safety-control-tampering.yaml  sandbox-escape-config.yaml
constraints/generic/asi05-code-execution/: no-eval-exec.yaml  no-os-system.yaml
constraints/generic/capability/: code-eval-safety.yaml  database-safety.yaml  exec-safety.yaml  file-ops-safety.yaml  web-network-safety.yaml
constraints/generic/tier4/: data-flow-filter.yaml  data-flow-no-exfil.yaml  filter-completeness-sqli.yaml  no-new-access-threshold.yaml
constraints/generic/universal/: credential-paths.yaml  dangerous-commands.yaml  path-traversal.yaml  ssrf-deny.yaml
constraints/openclaw/asi01-goal-hijack/: web-search-injection.yaml
constraints/openclaw/asi02-tool-misuse/: browser-url-denylist.yaml  exec-command-denylist.yaml  exec-no-elevated.yaml  exec-timeout-limit.yaml  web-fetch-url-denylist.yaml  web-fetch-url-scheme.yaml
constraints/openclaw/asi03-privilege-abuse/: gateway-url-override.yaml  safety-disable-approvals.yaml  safety-disable-security-mode.yaml  sandbox-escape-host-mode.yaml
constraints/openclaw/asi05-code-execution/: edit-path-traversal.yaml  read-path-denylist.yaml  read-path-traversal.yaml  write-path-traversal.yaml
docs/: contributing.md  getting-started.md  index.md
docs/guides/: architecture.md  compose.md  config-scan.md  constraint-authoring.md  gate.md  http-api.md  openclaw-integration.md  security-model.md
docs/reference/: cli.md  composition.md  config-scanner.md  constraints.md  gate-proxy.md  guard.md  models.md  scan-layers.md  scan-models.md  scanner.md  server.md  solver.md  verifier.md
examples/: vulnerable-server.json
examples/openclaw-plugin/: README.md  index.ts  openclaw.plugin.json
scripts/: generate_api_docs.py
src/munio/: __init__.py  _composite.py  _matching.py  _policy_verifier.py  _temporal.py  _z3_regex.py  _z3_runtime.py  cli.py  constraints.py  downloader.py  guard.py  models.py  server.py  solver.py  verifier.py
src/munio/adapters/: __init__.py  _crewai.py  _langchain.py  _mcp.py  _openai_agents.py
src/munio/gate/: __init__.py  __main__.py  cli.py  discovery.py  interceptor.py  models.py  protocol_config.py  protocol_interceptor.py  protocol_models.py  protocol_monitors.py  protocol_proxy.py  proxy.py  stats.py
src/munio/scan/: __init__.py  _config_utils.py  cli.py  compose_cli.py  composition.py  composition_report.py  config.py  config_scanner.py  discovery.py  mcp_client.py  models.py  orchestrator.py  recommendations.py  sarif.py  schema_loader.py
src/munio/scan/layers/: __init__.py  _ts_utils.py  _z3_utils.py  composition_taxonomy.py  correlation.py  l1_schema.py  l2_5_classifier.py  l2_6_multilingual.py  l2_heuristic.py  l3_static.py  l4_z3.py  l5_composition.py  l7_source.py
tests/: conftest.py  test_constraint_coverage_invariants.py  test_security_invariants.py
tests/core/: conftest.py  strategies.py  test_adapter_crewai.py  test_adapter_langchain.py  test_adapter_mcp.py  test_adapter_openai_agents.py  test_cli.py  test_constraints.py  test_downloader.py  test_guard.py  test_models.py  test_openclaw_constraints.py  test_policy_checks.py  test_property_models.py  test_property_solver.py  test_server.py  test_solver.py  test_temporal.py  test_verifier.py
tests/gate/: mock_mcp_server.py  test_cli.py  test_discovery.py  test_e2e.py  test_interceptor.py  test_models.py  test_protocol_config.py  test_protocol_integration.py  test_protocol_interceptor.py  test_protocol_models.py  test_protocol_monitors.py  test_proxy_helpers.py  test_proxy_integration.py  test_real_mcp_servers.py  test_restore.py  test_stats.py  test_subprocess_proxy.py
tests/scan/: conftest.py  mcp_vulnerability_corpus.json  test_cli.py  test_compose_cli.py  test_composition.py  test_config_scanner.py  test_config_utils.py  test_correlation.py  test_discovery.py  test_init.py  test_integration.py  test_l1_schema.py  test_l2_5_classifier.py  test_l2_6_multilingual.py  test_l2_heuristic.py  test_l3_static.py  test_l4_z3.py  test_l5_composition.py  test_l7_source.py  test_mcp_client.py  test_models.py  test_orchestrator.py  test_real_servers.py  test_sarif.py  test_schema_loader.py  test_sct.py
tests/scan/fixtures/: echo_server.py
tests/scan/fixtures/l7_source/: cmd_injection_helper.js  cmd_injection_inline.js  cmd_injection_python.py  code_injection_eval.js  path_traversal_direct.js  regex_exec_not_sink.js  safe_execfile_array.js  safe_parameterized_query.js  safe_shlex_python.py  setRequestHandler_dispatch.js  sql_injection_python.py  ssrf_fetch.js  (+2 more)
